# mcp-latex-tools

./: .coverage  .gitignore  CLAUDE.md  DEBUG_MCP_PROTOCOL.md  DOCUMENTATION_STRATEGY.md  LATEX_UTILS_DESIGN.md  README.md  RESEARCH_WORKFLOW.md  main.py  pyproject.toml  research_workflow_example.tex  test_direct_server.py  test_latex_direct.py  test_mcp_client.py  test_mcp_server.py  test_minimal_server.py  test_protocol_debug.py  test_simple_tools.py  test_tools_directly.py
docs/: LLM_REFERENCE.md  README.md
docs/api-reference/: cleanup.md  compile-latex.md  pdf-info.md  validate-latex.md
docs/development/: ARCHITECTURE.md  BACKLOG.md  DEVELOPMENT_WORKFLOW.md  TASK_DEFINITION_STANDARD.md  TASK_NAMING.md
docs/examples/: integration-patterns.md
docs/getting-started/: claude-code-setup.md  first-compilation.md  installation.md
docs/schemas/: mcp-tools.json
docs/tasks/: 26Q2-DEBT-01.md  26Q2-ENH-01.md  26Q2-ENH-02.md  26Q2-REFAC-01.md  26Q2-REFAC-02.md  26Q2-REFAC-03.md  26Q2-TOOL-01.md  verify-26Q2-DEBT-01.sh  verify-26Q2-ENH-01.sh  verify-26Q2-ENH-02.sh  verify-26Q2-REFAC-01.sh  verify-26Q2-REFAC-02.sh  verify-26Q2-REFAC-03.sh  verify-26Q2-TOOL-01.sh
docs/troubleshooting/: common-errors.md
src/mcp_latex_tools/: __init__.py  config.py  (+1 more)
tests/: __init__.py  test_cleanup.py  test_cleanup_edge_cases.py  test_compile.py  test_config.py  test_detect_packages.py  test_latex_utils.py  test_log_parser.py  test_mcp_resources_prompts.py  test_pdf_info.py  test_pdf_info_edge_cases.py  test_server_error_handling.py  test_server_integration.py  test_validate.py
(+22 files in other folders)
