[project]
name = "mcp-latex-tools"
version = "0.1.0"
description = "MCP server for LaTeX compilation and PDF tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.11.0",
    "pypdf>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_latex_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
]
